Updating Widgets for enemies to BPs

--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -29,4 +29,10 @@ WindowMirrorMode=1
 [FProjectLauncher]
 AdvancedMode=False
 
+[/Script/AndroidPlatformEditor.AndroidSDKSettings]
+SDKPath=(Path="")
+NDKPath=(Path="")
+ANTPath=(Path="")
+JavaPath=(Path="")
+
 
