Basic Gameplay Loop Implemented, needs fail state.

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -110,11 +110,11 @@ MRUItem0=/Game/Levels/TestMap_01
 LastLevel=/Game/Levels/TestMap_01
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/BP_SequenceGameMode.BP_SequenceGameMode
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_Buttons.BPW_Buttons
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/Logic/BP_GameLogic.BP_GameLogic
 OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemyBase.BP_EnemyBase
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_Buttons.BPW_Buttons
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_GameWindow.BPW_GameWindow
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -623,6 +623,46 @@ Actor.TransformCommon=True
 Actor.Rendering=True
 Actor.Input=True
 Actor.Actor=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+ObjectProperty.Variable=True
+ObjectProperty.DefaultValueCategory=True
+ObjectProperty.Events=True
+K2Node_VariableSet.Events=True
+IntProperty.Variable=True
+IntProperty.DefaultValueCategory=True
+K2Node_CallFunction.Graph=True
+K2Node_VariableGet.Events=True
+BP_EnemyBase_C.Default=True
+ByteProperty.Variable=True
+ByteProperty.DefaultValueCategory=True
+ArrayProperty.Variable=True
+ArrayProperty.DefaultValueCategory=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+BPW_GameWindow_C.Appearance=True
+BPW_GameWindow_C.Designer=True
+BPW_GameWindow_C.Input=True
+BPW_GameWindow_C.Interaction=True
+BPW_GameWindow_C.Performance=True
+BPW_GameWindow_C.Layout=True
+BPW_GameWindow_C.Behavior=True
+BPW_GameWindow_C.Render Transform=True
+BPW_GameWindow_C.Clipping=True
+BPW_GameWindow_C.Navigation=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
 
 [RootWindow]
 ScreenPosition=X=637.000 Y=0.000
@@ -670,8 +710,8 @@ OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
 [DetailPropertyExpansion]
-AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio|CookOverrides\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|ResamplingQuality\" "
-Object=
+AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio"
+Object="\"Object.Appearance.Font\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -690,9 +730,13 @@ ClassViewerProjectSettings="\"Object.ClassVisibilityManagement.InternalOnlyPaths
 MovieSceneToolsProjectSettings="\"Object.TrackSettings.FbxSettings\" "
 PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Object.ImportSettings.BaseMapTextureSuffixes\" "
 UMGEditorProjectSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer.DebugResolutions.DebugResolutions[0]\" \"Object.Designer.DebugResolutions.DebugResolutions[1]\" \"Object.Designer.DebugResolutions.DebugResolutions[2]\" \"Object.Designer.DebugResolutions.DebugResolutions[3]\" \"Object.Designer.DebugResolutions.DebugResolutions[4]\" \"Object.Designer.DebugResolutions.DebugResolutions[5]\" \"Object.Designer.DebugResolutions.DebugResolutions[6]\" \"Object.Designer.DebugResolutions.DebugResolutions[7]\" \"Object.Designer.DebugResolutions.DebugResolutions[8]\" \"Object.Designer.DebugResolutions.DebugResolutions[9]\" \"Object.Designer.DebugResolutions.DebugResolutions[10]\" \"Object.Designer.DebugResolutions.DebugResolutions[11]\" \"Object.Designer.DebugResolutions.DebugResolutions[12]\" "
-IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio|CookOverrides\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|ResamplingQuality\" "
+IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio"
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" "
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
 
 [Directories2]
 UNR=../../../../Users/hpennycuick/Documents/SimonOfTheDead/Content/Levels
@@ -1375,10 +1419,10 @@ WmfMediaSettings=PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntime
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Widgets/BPW_GameWindow
 MRUItem1=/Game/Blueprints/Widgets/BPW_Buttons
-MRUItem2=/Game/Blueprints/BP_SequenceHUD
-MRUItem3=/Game/Blueprints/BP_SequenceGameMode
-MRUItem4=/Game/Blueprints/Enemies/BP_EnemyBase
-MRUItem5=/Game/Blueprints/Logic/BP_GameLogic
+MRUItem2=/Game/Blueprints/Enemies/BP_EnemyBase
+MRUItem3=/Game/Blueprints/Logic/BP_GameLogic
+MRUItem4=/Game/Blueprints/BP_SequenceHUD
+MRUItem5=/Game/Blueprints/BP_SequenceGameMode
 MRUItem6=/Game/Textures/Game_BG_Mat
 MRUItem7=/Game/Materials/MAT_BG
 MRUItem8=/Game/Blueprints/Themes/BP_Theme_Default
