--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -110,11 +110,10 @@ MRUItem0=/Game/Levels/TestMap_01
 LastLevel=/Game/Levels/TestMap_01
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Logic/BP_GameLogic.BP_GameLogic
+CleanShutdown=True
 OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemyBase.BP_EnemyBase
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_Buttons.BPW_Buttons
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_GameWindow.BPW_GameWindow
+OpenAssetsAtExit=/Game/Blueprints/Logic/BP_GameLogic.BP_GameLogic
+OpenAssetsAtExit=/Game/Blueprints/Logic/Enum_SequenceItem.Enum_SequenceItem
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -663,6 +662,8 @@ BPW_GameWindow_C.Navigation=True
 K2Node_FunctionResult.Graph=True
 K2Node_FunctionResult.Inputs=True
 K2Node_FunctionResult.Outputs=True
+UserDefinedEnum.Enumerators=True
+UserDefinedEnum.Description=True
 
 [RootWindow]
 ScreenPosition=X=637.000 Y=0.000
@@ -693,7 +694,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Enemies
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Logic
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -711,7 +712,7 @@ OnlyBuildVisibility=False
 
 [DetailPropertyExpansion]
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio"
-Object="\"Object.Appearance.Font\" "
+Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -735,8 +736,8 @@ LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.Font\" "
-Visual="\"Object.Appearance.Font\" "
+Widget=
+Visual=
 
 [Directories2]
 UNR=../../../../Users/hpennycuick/Documents/SimonOfTheDead/Content/Levels
@@ -1417,15 +1418,16 @@ UdpMessagingSettings=PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRun
 WmfMediaSettings=PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Widgets/BPW_GameWindow
-MRUItem1=/Game/Blueprints/Widgets/BPW_Buttons
+MRUItem0=/Game/Blueprints/Logic/Enum_SequenceItem
+MRUItem1=/Game/Blueprints/Logic/BP_GameLogic
 MRUItem2=/Game/Blueprints/Enemies/BP_EnemyBase
-MRUItem3=/Game/Blueprints/Logic/BP_GameLogic
-MRUItem4=/Game/Blueprints/BP_SequenceHUD
-MRUItem5=/Game/Blueprints/BP_SequenceGameMode
-MRUItem6=/Game/Textures/Game_BG_Mat
-MRUItem7=/Game/Materials/MAT_BG
-MRUItem8=/Game/Blueprints/Themes/BP_Theme_Default
+MRUItem3=/Game/Blueprints/Widgets/BPW_GameWindow
+MRUItem4=/Game/Blueprints/Widgets/BPW_Buttons
+MRUItem5=/Game/Blueprints/BP_SequenceHUD
+MRUItem6=/Game/Blueprints/BP_SequenceGameMode
+MRUItem7=/Game/Textures/Game_BG_Mat
+MRUItem8=/Game/Materials/MAT_BG
+MRUItem9=/Game/Blueprints/Themes/BP_Theme_Default
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.Actor;/Engine/Transient.ActorFactoryEmptyActor_0
