--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -109,7 +109,10 @@ MRUItem0=/Game/Levels/TestMap_01
 LastLevel=/Game/Levels/TestMap_01
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_GameWindow.BPW_GameWindow
+OpenAssetsAtExit=/Game/Blueprints/Logic/BP_GameLogic.BP_GameLogic
+OpenAssetsAtExit=/Game/Blueprints/Logic/BP_Saver.BP_Saver
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -1204,7 +1207,7 @@ OnlyBuildVisibility=False
 
 [DetailPropertyExpansion]
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio"
-Object="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -1256,7 +1259,7 @@ BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.R
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Border="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
 ContentWidget="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
-PanelWidget="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
+PanelWidget=
 Button="\"Object.Appearance.BackgroundColor\" "
 
 [Directories2]
@@ -1942,23 +1945,28 @@ BPW_Hearts_C=
 BoxComponent=BoxComponent.Collision.Collision,
 BPW_GameWindow_C=BP_EnemyBase_C.Collision.Collision,
 K2Node_VariableGet=BP_EnemyBase_C.Collision.Collision,
+ObjectProperty=BP_EnemyBase_C.Collision.Collision,
+IntProperty=BP_EnemyBase_C.Collision.Collision,
+BP_GameLogic_C=BP_EnemyBase_C.Collision.Collision,
+BP_Saver_C=BP_EnemyBase_C.Collision.Collision,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Widgets/BPW_GameWindow
-MRUItem1=/Game/Textures/UI/textures-pixel-heart-1_600x
-MRUItem2=/Game/Blueprints/Widgets/BPW_Buttons
-MRUItem3=/Game/Blueprints/Widgets/BPW_Hearts
-MRUItem4=/Game/Blueprints/BP_SequenceController
-MRUItem5=/Game/Levels/TestMap_01
-MRUItem6=/Game/Blueprints/Enemies/BP_AIController
-MRUItem7=/Game/Blueprints/Enemies/BP_EnemyBase
-MRUItem8=/Game/Blueprints/Logic/BP_GameLogic
-MRUItem9=/Game/Blueprints/Logic/Enum_SequenceItem
-MRUItem10=/Game/Blueprints/BP_SequenceHUD
-MRUItem11=/Game/Blueprints/BP_SequenceGameMode
-MRUItem12=/Game/Textures/Game_BG_Mat
-MRUItem13=/Game/Materials/MAT_BG
-MRUItem14=/Game/Blueprints/Themes/BP_Theme_Default
+MRUItem0=/Game/Blueprints/Logic/BP_Saver
+MRUItem1=/Game/Blueprints/Logic/BP_GameLogic
+MRUItem2=/Game/Blueprints/Widgets/BPW_GameWindow
+MRUItem3=/Game/Textures/UI/textures-pixel-heart-1_600x
+MRUItem4=/Game/Blueprints/Widgets/BPW_Buttons
+MRUItem5=/Game/Blueprints/Widgets/BPW_Hearts
+MRUItem6=/Game/Blueprints/BP_SequenceController
+MRUItem7=/Game/Levels/TestMap_01
+MRUItem8=/Game/Blueprints/Enemies/BP_AIController
+MRUItem9=/Game/Blueprints/Enemies/BP_EnemyBase
+MRUItem10=/Game/Blueprints/Logic/Enum_SequenceItem
+MRUItem11=/Game/Blueprints/BP_SequenceHUD
+MRUItem12=/Game/Blueprints/BP_SequenceGameMode
+MRUItem13=/Game/Textures/Game_BG_Mat
+MRUItem14=/Game/Materials/MAT_BG
+MRUItem15=/Game/Blueprints/Themes/BP_Theme_Default
 
 [PlacementMode]
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -2015,6 +2023,7 @@ bMaterialQualityUsed[2]=0
 
 [SuppressableDialogs]
 Warning_ReparentTitle=False
+ChangeVariableType_Warning=False
 
 [UMGEditor.Designer]
 PreviewWidth=576
