--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -110,9 +110,7 @@ LastLevel=/Game/Levels/TestMap_01
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_GameWindow.BPW_GameWindow
-OpenAssetsAtExit=/Game/Blueprints/Logic/BP_GameLogic.BP_GameLogic
-OpenAssetsAtExit=/Game/Blueprints/Logic/BP_Saver.BP_Saver
+SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -1263,7 +1261,7 @@ PanelWidget=
 Button="\"Object.Appearance.BackgroundColor\" "
 
 [Directories2]
-UNR=../../../../Users/hpennycuick/Documents/SimonOfTheDead/Content/Levels
+UNR=C:/Users/drago/Documents/Unreal Projects/SimonOfTheDead/Content/Levels
 BRUSH=C:/Users/drago/Documents/Unreal Projects/SimonOfTheDead/Content/
 FBX=C:/Users/drago/Documents/Unreal Projects/SimonOfTheDead/Content/
 FBXAnim=C:/Users/drago/Documents/Unreal Projects/SimonOfTheDead/Content/
