--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -32,4 +32,10 @@ AdvancedMode=False
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[/Script/AndroidPlatformEditor.AndroidSDKSettings]
+SDKPath=(Path="")
+NDKPath=(Path="")
+ANTPath=(Path="")
+JavaPath=(Path="")
+
 
