--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,2 +1,7 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=47E1E4F749E78E71359F8D990A73B93B
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+bCompressed=True
+bSkipEditorContent=True
+
