--- a/Saved/Config/Windows/Game.ini
+++ b/Saved/Config/Windows/Game.ini
@@ -1,1 +1,22 @@
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
+StagingDirectory=(Path="C:/Users/drago/Documents/Unreal Projects/BUILDS/SimonOfTheDead")
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+bGenerateNoChunks=False
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+HttpChunkInstallDataVersion=
+IncludeAppLocalPrerequisites=False
+ApplocalPrerequisitesDirectory=(Path="")
+bCookAll=False
+bCookMapsOnly=False
+bEncryptIniFiles=False
+bEncryptPakIndex=False
+bNativizeBlueprintAssets=False
+bNativizeOnlySelectedBlueprints=False
+
 
