Updated shield textures & began working on homing particle
Needs more work on figuring out how to do the homing particle. Pre rendered or dynamic?

--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -9,6 +9,7 @@ Paths=../../../Engine/Plugins/Lumin/MagicLeap/Content
 Paths=../../../Engine/Plugins/Lumin/MagicLeapEmulator/Content
 Paths=../../../Engine/Plugins/Media/MediaCompositing/Content
 Paths=../../../Engine/Plugins/Runtime/Oculus/OculusVR/Content
+Paths=../../../Engine/Plugins/Enterprise/VariantManagerContent/Content
 
 [/Script/UdpMessaging.UdpMessagingSettings]
 EnableTransport=True
@@ -31,5 +32,11 @@ AdvancedMode=False
 
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
+
+[/Script/AndroidPlatformEditor.AndroidSDKSettings]
+SDKPath=(Path="")
+NDKPath=(Path="")
+ANTPath=(Path="")
+JavaPath=(Path="")
 
 
