--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -83,6 +83,7 @@ DeviceToEmulate=Android_Mid
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=576
 NewWindowHeight=1024
+LastExecutedPlayModeType=PlayMode_InMobilePreview
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -113,11 +114,12 @@ LastLevel=/Game/Levels/TestMap_01
 [AssetEditorManager]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Blueprints/Logic/BP_ParticleShot.BP_ParticleShot
-OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemyDefault.BP_EnemyDefault
-OpenAssetsAtExit=/Game/Materials/MAT_Ribbon.MAT_Ribbon
 OpenAssetsAtExit=/Game/Particles/P_RibbonParticle.P_RibbonParticle
 OpenAssetsAtExit=/Game/Blueprints/Logic/BP_GameLogic.BP_GameLogic
+OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemyDefault.BP_EnemyDefault
+OpenAssetsAtExit=/Game/Blueprints/Logic/BP_ParticleShot.BP_ParticleShot
+OpenAssetsAtExit=/Game/Particles/P_Explosion.P_Explosion
+OpenAssetsAtExit=/Game/Materials/MAT_Star.MAT_Star
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -2438,11 +2440,71 @@ PaperGroupedSpriteComponent.Cooking=True
 PaperGroupedSpriteComponent.Events=True
 ProjectileMovementComponent.Collision=True
 StaticMeshActor.Replication=True
+Emitter.TransformCommon=True
+Emitter.Particles=True
+Emitter.EmitterActions=True
+Emitter.Materials=True
+Emitter.Attachment=True
+Emitter.Lighting=True
+Emitter.Rendering=True
+Emitter.LOD=True
+Emitter.Tags=True
+Emitter.Activation=True
+Emitter.Cooking=True
+Emitter.Emitter=True
+Emitter.Replication=True
+Emitter.Actor=True
+BP_ParticleShot_C.TransformCommon=True
+ParticleModuleColor_Seeded.RandomSeed=True
+ParticleModuleColor_Seeded.Color=True
+ParticleModuleColor_Seeded.Cascade=True
+ParticleModuleRotationOverLifetime.Rotation=True
+ParticleModuleRotationOverLifetime.Cascade=True
+ParticleModuleRotationRate.Rotation=True
+ParticleModuleRotationRate.Cascade=True
+REINST_BP_EnemyNormal_C_247.TransformCommon=True
+REINST_BP_EnemyNormal_C_247.Animation=True
+REINST_BP_EnemyNormal_C_247.Mesh=True
+REINST_BP_EnemyNormal_C_247.None=True
+REINST_BP_EnemyNormal_C_247.Physics=True
+REINST_BP_EnemyNormal_C_247.Clothing=True
+REINST_BP_EnemyNormal_C_247.Collision=True
+REINST_BP_EnemyNormal_C_247.Lighting=True
+REINST_BP_EnemyNormal_C_247.ClothingSimulation=True
+REINST_BP_EnemyNormal_C_247.Rendering=True
+REINST_BP_EnemyNormal_C_247.Tags=True
+REINST_BP_EnemyNormal_C_247.Activation=True
+REINST_BP_EnemyNormal_C_247.Cooking=True
+REINST_BP_EnemyNormal_C_247.Character Movement (General Settings)=True
+REINST_BP_EnemyNormal_C_247.Character Movement: Walking=True
+REINST_BP_EnemyNormal_C_247.Character Movement: Jumping / Falling=True
+REINST_BP_EnemyNormal_C_247.Character Movement (Networking)=True
+REINST_BP_EnemyNormal_C_247.Character Movement: Swimming=True
+REINST_BP_EnemyNormal_C_247.Character Movement: Flying=True
+REINST_BP_EnemyNormal_C_247.Character Movement: Custom Movement=True
+REINST_BP_EnemyNormal_C_247.Character Movement (Rotation Settings)=True
+REINST_BP_EnemyNormal_C_247.Character Movement: Physics Interaction=True
+REINST_BP_EnemyNormal_C_247.Character Movement=True
+REINST_BP_EnemyNormal_C_247.Character Movement: Avoidance=True
+REINST_BP_EnemyNormal_C_247.RootMotion=True
+REINST_BP_EnemyNormal_C_247.Character Movement: NavMesh Movement=True
+REINST_BP_EnemyNormal_C_247.NavMovement=True
+REINST_BP_EnemyNormal_C_247.Velocity=True
+REINST_BP_EnemyNormal_C_247.PlanarMovement=True
+REINST_BP_EnemyNormal_C_247.MovementComponent=True
+REINST_BP_EnemyNormal_C_247.Shape=True
+REINST_BP_EnemyNormal_C_247.Navigation=True
+REINST_BP_EnemyNormal_C_247.Character=True
+REINST_BP_EnemyNormal_C_247.Camera=True
+REINST_BP_EnemyNormal_C_247.Pawn=True
+REINST_BP_EnemyNormal_C_247.Replication=True
+REINST_BP_EnemyNormal_C_247.Input=True
+REINST_BP_EnemyNormal_C_247.Actor=True
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=43.333
-WindowSize=X=1273.333 Y=702.667
-InitiallyMaximized=True
+ScreenPosition=X=0.000 Y=42.667
+WindowSize=X=1272.667 Y=702.667
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2468,7 +2530,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Textures/UI
+ContentBrowserTab1.SelectedPaths=/Game/Particles
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2480,6 +2542,8 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2488,7 +2552,7 @@ OnlyBuildVisibility=False
 
 [DetailPropertyExpansion]
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" "
-Object="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
+Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -2547,9 +2611,9 @@ BP_EnemyBoss_C=
 BP_EnemyNormal_C="\"Object.Default.ActivePanels\" "
 REINST_BP_EnemyBoss_C_424="\"Object.Default.ActivePanels\" "
 REINST_BP_EnemyBoss_C_440="\"Object.Default.ActivePanels\" "
-ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstScale.Distribution\" "
-ParticleModuleSpawnBase="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
-ParticleModule="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
+ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
+ParticleModule="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 ParticleModuleSpawnPerUnit="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
 ParticleModuleTrailSource="\"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleTrailBase="\"Object.Source.SourceStrength.Distribution\" "
@@ -2559,16 +2623,22 @@ ParticleModuleSize="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distributi
 ParticleModuleSizeBase="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
 ParticleModuleVelocity="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
 ParticleModuleVelocityBase="\"Object.Velocity.StartVelocity\" \"Object.Velocity.StartVelocity.Distribution\" \"Object.Velocity.StartVelocityRadial.Distribution\" "
-ParticleModuleColorOverLife="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
-ParticleModuleColorBase="\"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution\" "
+ParticleModuleColorOverLife="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[1]\" "
+ParticleModuleColorBase="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[1]\" "
 BP_GameLogic_C=
+ParticleModuleColor_Seeded="\"Object.Color.StartColor.Distribution\" \"Object.Color.StartColor.Distribution.Object.ConstantCurve.Points\" \"Object.Color.StartAlpha\" \"Object.Color.StartAlpha.Distribution\" "
+ParticleModuleColor="\"Object.Color.StartColor.Distribution\" \"Object.Color.StartColor.Distribution.Object.ConstantCurve.Points\" \"Object.Color.StartAlpha\" \"Object.Color.StartAlpha.Distribution\" "
+ParticleModuleRotationOverLifetime="\"Object.Rotation.RotationOverLife\" \"Object.Rotation.RotationOverLife.Distribution\" \"Object.Rotation.RotationOverLife.Distribution.Object.ConstantCurve\" \"Object.Rotation.RotationOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Rotation.RotationOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.Rotation.RotationOverLife.Distribution.Object.ConstantCurve.Points.Points[1]\" "
+ParticleModuleRotationBase="\"Object.Rotation.RotationOverLife\" \"Object.Rotation.RotationOverLife.Distribution\" \"Object.Rotation.RotationOverLife.Distribution.Object.ConstantCurve\" \"Object.Rotation.RotationOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Rotation.RotationOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.Rotation.RotationOverLife.Distribution.Object.ConstantCurve.Points.Points[1]\" "
+ParticleModuleRotationRate="\"Object.Rotation.StartRotationRate\" \"Object.Rotation.StartRotationRate.Distribution\" "
+ParticleModuleRotationRateBase="\"Object.Rotation.StartRotationRate\" \"Object.Rotation.StartRotationRate.Distribution\" "
 
 [Directories2]
 UNR=../../../../../../Users/hpennycuick/Documents/Unreal Projects/SimonOfTheDead/Content/Levels
 BRUSH=C:/Users/drago/Documents/Unreal Projects/SimonOfTheDead/Content/
 FBX=C:/Users/drago/Documents/Unreal Projects/SimonOfTheDead/Content/
 FBXAnim=C:/Users/drago/Documents/Unreal Projects/SimonOfTheDead/Content/
-GenericImport=C:/Users/drago/Documents/Unreal Projects/SimonOfTheDead/Content/
+GenericImport=../../../../../../Users/hpennycuick/Documents/Projectile.png
 GenericExport=../../../../../../Users/hpennycuick/Documents/Button_A4.TGA
 GenericOpen=C:/Users/drago/Documents/Unreal Projects/SimonOfTheDead/Content/
 GenericSave=C:/Users/drago/Documents/Unreal Projects/SimonOfTheDead/Content/
@@ -3194,6 +3264,8 @@ Cascade.TimeStamp=2018.12.10-01.22.26
 Cascade.LastCompileMethod=Unknown
 DistCurveEditor.TimeStamp=2018.12.10-01.22.28
 DistCurveEditor.LastCompileMethod=Unknown
+TextureEditor.TimeStamp=2018.12.10-01.22.34
+TextureEditor.LastCompileMethod=Unknown
 
 [MessageLog]
 LastLogListing=PIE
@@ -3293,30 +3365,34 @@ BP_EnemyBoss_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCate
 BP_EnemyNormal_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BP_ParticleShot_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 ProjectileMovementComponent=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+ParticleModuleColor_Seeded=ParticleModuleColor_Seeded.Color.Distribution,ParticleModuleColor_Seeded.Color.ConstantCurve,ParticleModuleColor_Seeded.Color.Points,
+ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Logic/BP_GameLogic
-MRUItem1=/Game/Particles/P_RibbonParticle
-MRUItem2=/Game/Materials/MAT_Ribbon
+MRUItem0=/Game/Particles/P_RibbonParticle
+MRUItem1=/Game/Blueprints/Logic/BP_GameLogic
+MRUItem2=/Game/Blueprints/Enemies/BP_EnemyDefault
 MRUItem3=/Game/Blueprints/Logic/BP_ParticleShot
-MRUItem4=/Game/Blueprints/Enemies/BP_EnemyDefault
-MRUItem5=/Game/Blueprints/Enemies/BP_EnemyBoss
-MRUItem6=/Game/Blueprints/BP_SequenceController
-MRUItem7=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem8=/Game/Blueprints/Enemies/BP_EnemyNormal
-MRUItem9=/Game/Blueprints/Enemies/BP_EnemySmall
-MRUItem10=/Game/Blueprints/Enemies/BP_Enemy_Normal
-MRUItem11=/Game/Blueprints/Enemies/BP_EnemyBase
-MRUItem12=/Game/Blueprints/Logic/BP_Saver
-MRUItem13=/Game/Blueprints/Widgets/BPW_GameWindow
-MRUItem14=/Game/Textures/UI/textures-pixel-heart-1_600x
-MRUItem15=/Game/Blueprints/Widgets/BPW_Buttons
-MRUItem16=/Game/Blueprints/Widgets/BPW_Hearts
-MRUItem17=/Game/Levels/TestMap_01
-MRUItem18=/Game/Blueprints/Enemies/BP_AIController
-MRUItem19=/Game/Blueprints/Logic/Enum_SequenceItem
+MRUItem4=/Game/Particles/P_Explosion
+MRUItem5=/Game/Materials/MAT_Star
+MRUItem6=/Game/Textures/Projectile
+MRUItem7=/Game/Textures/Star
+MRUItem8=/Game/Materials/MAT_Ribbon
+MRUItem9=/Game/Blueprints/Enemies/BP_EnemyBoss
+MRUItem10=/Game/Blueprints/BP_SequenceController
+MRUItem11=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem12=/Game/Blueprints/Enemies/BP_EnemyNormal
+MRUItem13=/Game/Blueprints/Enemies/BP_EnemySmall
+MRUItem14=/Game/Blueprints/Enemies/BP_Enemy_Normal
+MRUItem15=/Game/Blueprints/Enemies/BP_EnemyBase
+MRUItem16=/Game/Blueprints/Logic/BP_Saver
+MRUItem17=/Game/Blueprints/Widgets/BPW_GameWindow
+MRUItem18=/Game/Textures/UI/textures-pixel-heart-1_600x
+MRUItem19=/Game/Blueprints/Widgets/BPW_Buttons
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Logic/BP_ParticleShot.BP_ParticleShot;
+RecentlyPlaced=/Game/Particles/P_RibbonParticle.P_RibbonParticle;
 RecentlyPlaced=/Game/Blueprints/Enemies/BP_EnemyNormal.BP_EnemyNormal;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Game/Blueprints/Enemies/BP_EnemyBoss.BP_EnemyBoss;/Engine/Transient.ActorFactoryBlueprint_0
 RecentlyPlaced=/Script/NavigationSystem.NavMeshBoundsVolume;/Engine/Transient.ActorFactoryBoxVolume_0
@@ -3338,9 +3414,11 @@ RecentlyPlaced=/Game/Blueprints/Enemies/BP_EnemyDefault.BP_EnemyDefault;
 /Game/Blueprints/Enemies/BP_EnemyNormal.BP_EnemyNormal=0
 /Engine/EditorBlueprintResources/StandardMacros.StandardMacros=0
 /Game/Blueprints/Enemies/BP_EnemyBoss.BP_EnemyBoss=0
+/Game/Textures/Star.Star=1
+/Game/Textures/Projectile.Projectile=1
 
 [MaterialEditor]
-PrimType=1
+PrimType=2
 
 [/Script/UnrealEd.MaterialStatsOptions]
 bPlatformUsed[0]=1
@@ -3396,6 +3474,7 @@ bCanPreviewSwapAspectRatio=True
 Texture2D.LevelOfDetail=True
 ProjectPackagingSettings.Packaging=True
 ParticleSystemComponent.Particles=False
+ParticleSystemComponent.Rendering=True
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
