--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -112,14 +112,10 @@ MRUItem0=/Game/Levels/TestMap_01
 LastLevel=/Game/Levels/TestMap_01
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Particles/P_RibbonParticle.P_RibbonParticle
-OpenAssetsAtExit=/Game/Blueprints/Logic/BP_GameLogic.BP_GameLogic
 OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemyDefault.BP_EnemyDefault
-OpenAssetsAtExit=/Game/Blueprints/Logic/BP_ParticleShot.BP_ParticleShot
-OpenAssetsAtExit=/Game/Particles/P_Explosion.P_Explosion
-OpenAssetsAtExit=/Game/Materials/MAT_Star.MAT_Star
+OpenAssetsAtExit=/Game/Blueprints/Logic/BP_GameLogic.BP_GameLogic
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -2552,7 +2548,7 @@ OnlyBuildVisibility=False
 
 [DetailPropertyExpansion]
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" "
-Object=
+Object="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[1]\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -2613,7 +2609,7 @@ REINST_BP_EnemyBoss_C_424="\"Object.Default.ActivePanels\" "
 REINST_BP_EnemyBoss_C_440="\"Object.Default.ActivePanels\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
 ParticleModuleSpawnBase="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
-ParticleModule="\"Object.Size.StartSize\" \"Object.Size.StartSize.Distribution\" "
+ParticleModule="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[1]\" "
 ParticleModuleSpawnPerUnit="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
 ParticleModuleTrailSource="\"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleTrailBase="\"Object.Source.SourceStrength.Distribution\" "
@@ -3369,14 +3365,14 @@ ParticleModuleColor_Seeded=ParticleModuleColor_Seeded.Color.Distribution,Particl
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Particles/P_RibbonParticle
-MRUItem1=/Game/Blueprints/Logic/BP_GameLogic
-MRUItem2=/Game/Blueprints/Enemies/BP_EnemyDefault
-MRUItem3=/Game/Blueprints/Logic/BP_ParticleShot
-MRUItem4=/Game/Particles/P_Explosion
-MRUItem5=/Game/Materials/MAT_Star
-MRUItem6=/Game/Textures/Projectile
-MRUItem7=/Game/Textures/Star
+MRUItem0=/Game/Blueprints/Logic/BP_GameLogic
+MRUItem1=/Game/Particles/P_Explosion
+MRUItem2=/Game/Textures/Star
+MRUItem3=/Game/Blueprints/Enemies/BP_EnemyDefault
+MRUItem4=/Game/Particles/P_RibbonParticle
+MRUItem5=/Game/Blueprints/Logic/BP_ParticleShot
+MRUItem6=/Game/Materials/MAT_Star
+MRUItem7=/Game/Textures/Projectile
 MRUItem8=/Game/Materials/MAT_Ribbon
 MRUItem9=/Game/Blueprints/Enemies/BP_EnemyBoss
 MRUItem10=/Game/Blueprints/BP_SequenceController
@@ -3416,6 +3412,7 @@ RecentlyPlaced=/Game/Blueprints/Enemies/BP_EnemyDefault.BP_EnemyDefault;
 /Game/Blueprints/Enemies/BP_EnemyBoss.BP_EnemyBoss=0
 /Game/Textures/Star.Star=1
 /Game/Textures/Projectile.Projectile=1
+/Game/Particles/P_Explosion.P_Explosion=1
 
 [MaterialEditor]
 PrimType=2
