--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -112,10 +112,11 @@ MRUItem0=/Game/Levels/TestMap_01
 LastLevel=/Game/Levels/TestMap_01
 
 [AssetEditorManager]
-CleanShutdown=False
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemyDefault.BP_EnemyDefault
 OpenAssetsAtExit=/Game/Blueprints/Logic/BP_GameLogic.BP_GameLogic
+OpenAssetsAtExit=/Game/Blueprints/Logic/BP_ParticleShot.BP_ParticleShot
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -2496,11 +2497,15 @@ REINST_BP_EnemyNormal_C_247.Pawn=True
 REINST_BP_EnemyNormal_C_247.Replication=True
 REINST_BP_EnemyNormal_C_247.Input=True
 REINST_BP_EnemyNormal_C_247.Actor=True
+BP_EnemyDefault_C.Variable=True
+BP_EnemyDefault_C.Sockets=True
+BP_EnemyDefault_C.ComponentReplication=True
+BP_EnemyDefault_C.Events=True
 
 [RootWindow]
-ScreenPosition=X=0.000 Y=42.667
+ScreenPosition=X=0.000 Y=45.333
 WindowSize=X=1272.667 Y=702.667
-InitiallyMaximized=False
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2526,7 +2531,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Particles
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Logic
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2548,7 +2553,7 @@ OnlyBuildVisibility=False
 
 [DetailPropertyExpansion]
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" "
-Object="\"Object.Color.ColorOverLife\" \"Object.Color.ColorOverLife.Distribution\" \"Object.Color.AlphaOverLife\" \"Object.Color.AlphaOverLife.Distribution\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.Color.AlphaOverLife.Distribution.Object.ConstantCurve.Points.Points[1]\" "
+Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -2576,7 +2581,7 @@ Widget=
 Visual=
 PaperSpriteComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent=
+PrimitiveComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 SceneComponent=
 ActorComponent=
 PaperFlipbookComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -3365,12 +3370,12 @@ ParticleModuleColor_Seeded=ParticleModuleColor_Seeded.Color.Distribution,Particl
 ParticleModuleColorOverLife=ParticleModuleColorOverLife.Color.Distribution,ParticleModuleColorOverLife.Color.ConstantCurve,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Logic/BP_GameLogic
-MRUItem1=/Game/Particles/P_Explosion
-MRUItem2=/Game/Textures/Star
-MRUItem3=/Game/Blueprints/Enemies/BP_EnemyDefault
-MRUItem4=/Game/Particles/P_RibbonParticle
-MRUItem5=/Game/Blueprints/Logic/BP_ParticleShot
+MRUItem0=/Game/Blueprints/Logic/BP_ParticleShot
+MRUItem1=/Game/Blueprints/Logic/BP_GameLogic
+MRUItem2=/Game/Particles/P_Explosion
+MRUItem3=/Game/Textures/Star
+MRUItem4=/Game/Blueprints/Enemies/BP_EnemyDefault
+MRUItem5=/Game/Particles/P_RibbonParticle
 MRUItem6=/Game/Materials/MAT_Star
 MRUItem7=/Game/Textures/Projectile
 MRUItem8=/Game/Materials/MAT_Ribbon
