--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -117,9 +117,8 @@ SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/Logic/BP_ParticleShot.BP_ParticleShot
 OpenAssetsAtExit=/Game/Blueprints/BP_SequenceController.BP_SequenceController
 OpenAssetsAtExit=/Game/Blueprints/Logic/BP_GameLogic.BP_GameLogic
-OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemyDefault.BP_EnemyDefault
 OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemySmall.BP_EnemySmall
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_Hearts.BPW_Hearts
+OpenAssetsAtExit=/Game/Textures/UI/HurtVingette.HurtVingette
 OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_GameWindow.BPW_GameWindow
 
 [DetailCategories]
@@ -2643,8 +2642,8 @@ UMGEditorProjectSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer
 IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" "
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" "
-TextBlock="\"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object.Appearance.Font\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 Widget="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" "
 Visual="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" "
 PaperSpriteComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2703,9 +2702,11 @@ ParticleModuleRotationRate="\"Object.Rotation.StartRotationRate\" \"Object.Rotat
 ParticleModuleRotationRateBase="\"Object.Rotation.StartRotationRate\" \"Object.Rotation.StartRotationRate.Distribution\" "
 LevelEditor2DSettings="\"Object.LayerSnapping.SnapLayers\" \"Object.LayerSnapping.SnapLayers.SnapLayers[0]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[1]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[2]\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[6].Parameters.Parameters[0].Object.ParameterValue\" "
-BPW_Hearts_C=
+BPW_Hearts_C="\"Object.Appearance.ColorAndOpacity\" "
 UserWidget=
 BP_EnemySmall_C=
+BPW_Buttons_C="\"Object.Appearance.ColorAndOpacity\" "
+BPW_GameWindow_C=
 
 [Directories2]
 UNR=../../../../../../Users/hpennycuick/Documents/Unreal Projects/SimonOfTheDead/Content/Levels
@@ -3447,26 +3448,26 @@ GetPointOnBezierCurve=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultVa
 BP_SequenceController_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/RoboBars/Materials/ExamplesUmg/MI_UmgPatternHearts
-MRUItem1=/Game/Blueprints/Widgets/BPW_GameWindow
-MRUItem2=/Game/Blueprints/Widgets/BPW_Hearts
-MRUItem3=/Game/Blueprints/Enemies/BP_EnemySmall
-MRUItem4=/Game/Blueprints/Enemies/BP_EnemyDefault
-MRUItem5=/Game/Blueprints/Logic/BP_GameLogic
-MRUItem6=/Game/Blueprints/BP_SequenceController
-MRUItem7=/Game/Blueprints/Logic/BP_ParticleShot
-MRUItem8=/Paper2D/DefaultSpriteMaterial
-MRUItem9=/Paper2D/MaskedUnlitSpriteMaterial
-MRUItem10=/Game/Materials/SpriteTranslucent
-MRUItem11=/Game/Textures/UI/Button_A1_Sprite
-MRUItem12=/Game/Blueprints/Enemies/BP_EnemyNormal
-MRUItem13=/Game/Particles/P_Explosion
-MRUItem14=/Game/Textures/Star
-MRUItem15=/Game/Particles/P_RibbonParticle
-MRUItem16=/Game/Materials/MAT_Star
-MRUItem17=/Game/Textures/Projectile
-MRUItem18=/Game/Materials/MAT_Ribbon
-MRUItem19=/Game/Blueprints/Enemies/BP_EnemyBoss
+MRUItem0=/Game/Blueprints/Logic/BP_GameLogic
+MRUItem1=/Game/Textures/UI/HurtVingette
+MRUItem2=/Game/RoboBars/Materials/ExamplesUmg/MI_UmgPatternHearts
+MRUItem3=/Game/Blueprints/Widgets/BPW_GameWindow
+MRUItem4=/Game/Blueprints/Widgets/BPW_Hearts
+MRUItem5=/Game/Blueprints/Enemies/BP_EnemySmall
+MRUItem6=/Game/Blueprints/Enemies/BP_EnemyDefault
+MRUItem7=/Game/Blueprints/BP_SequenceController
+MRUItem8=/Game/Blueprints/Logic/BP_ParticleShot
+MRUItem9=/Paper2D/DefaultSpriteMaterial
+MRUItem10=/Paper2D/MaskedUnlitSpriteMaterial
+MRUItem11=/Game/Materials/SpriteTranslucent
+MRUItem12=/Game/Textures/UI/Button_A1_Sprite
+MRUItem13=/Game/Blueprints/Enemies/BP_EnemyNormal
+MRUItem14=/Game/Particles/P_Explosion
+MRUItem15=/Game/Textures/Star
+MRUItem16=/Game/Particles/P_RibbonParticle
+MRUItem17=/Game/Materials/MAT_Star
+MRUItem18=/Game/Textures/Projectile
+MRUItem19=/Game/Materials/MAT_Ribbon
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Logic/BP_ParticleShot.BP_ParticleShot;
