--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -118,7 +118,6 @@ OpenAssetsAtExit=/Game/Blueprints/Logic/BP_ParticleShot.BP_ParticleShot
 OpenAssetsAtExit=/Game/Blueprints/BP_SequenceController.BP_SequenceController
 OpenAssetsAtExit=/Game/Blueprints/Logic/BP_GameLogic.BP_GameLogic
 OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemySmall.BP_EnemySmall
-OpenAssetsAtExit=/Game/Textures/UI/HurtVingette.HurtVingette
 OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_GameWindow.BPW_GameWindow
 
 [DetailCategories]
@@ -2620,7 +2619,7 @@ OnlyBuildVisibility=False
 
 [DetailPropertyExpansion]
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" "
-Object="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" "
+Object="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -2644,8 +2643,8 @@ LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" "
-Visual="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" "
+Widget="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
+Visual="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
 PaperSpriteComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -2672,7 +2671,7 @@ BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.R
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 Border="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
 ContentWidget="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
-PanelWidget=
+PanelWidget="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
 Button="\"Object.Appearance.BackgroundColor\" "
 BP_EnemyDefault_C=
 BP_EnemyBoss_C=
@@ -3503,6 +3502,7 @@ RecentlyPlaced=/Game/Blueprints/Enemies/BP_EnemyDefault.BP_EnemyDefault;
 /Game/Blueprints/Logic/BP_GameLogic.BP_GameLogic=0
 /Game/Blueprints/Widgets/BPW_Hearts.BPW_Hearts=0
 /Game/RoboBars/Materials/ExamplesUmg/MI_UmgPatternHearts.MI_UmgPatternHearts=0
+/Game/Textures/UI/HurtVingette.HurtVingette=0
 
 [MaterialEditor]
 PrimType=1
