Flippy boi update
Panels now flip to top when enemy gets closer to bottom

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -116,9 +116,12 @@ CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/Logic/BP_ParticleShot.BP_ParticleShot
 OpenAssetsAtExit=/Game/Blueprints/BP_SequenceController.BP_SequenceController
+OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemyDefault.BP_EnemyDefault
 OpenAssetsAtExit=/Game/Blueprints/Logic/BP_GameLogic.BP_GameLogic
 OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemySmall.BP_EnemySmall
+OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemyBoss.BP_EnemyBoss
 OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_GameWindow.BPW_GameWindow
+OpenAssetsAtExit=/Game/Blueprints/Enemies/BP_EnemyNormal.BP_EnemyNormal
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -2567,6 +2570,12 @@ REINST_BP_EnemyNormal_C_406.Replication=True
 REINST_BP_EnemyNormal_C_406.Input=True
 REINST_BP_EnemyNormal_C_406.Actor=True
 K2Node_InputAction.Input=True
+BP_SwitcherBox_C.Tick=True
+BP_SwitcherBox_C.Rendering=True
+BP_SwitcherBox_C.Replication=True
+BP_SwitcherBox_C.Input=True
+BP_SwitcherBox_C.Actor=True
+BP_SwitcherBox_C.TransformCommon=True
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=45.000
@@ -2619,7 +2628,7 @@ OnlyBuildVisibility=False
 
 [DetailPropertyExpansion]
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" "
-Object="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
+Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -2643,13 +2652,13 @@ LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
-Visual="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" "
 PaperSpriteComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-PrimitiveComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-SceneComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-ActorComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PrimitiveComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+ActorComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PaperFlipbookComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2675,7 +2684,7 @@ PanelWidget="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
 Button="\"Object.Appearance.BackgroundColor\" "
 BP_EnemyDefault_C=
 BP_EnemyBoss_C=
-BP_EnemyNormal_C="\"Object.Default.ActivePanels\" "
+BP_EnemyNormal_C=
 REINST_BP_EnemyBoss_C_424="\"Object.Default.ActivePanels\" "
 REINST_BP_EnemyBoss_C_440="\"Object.Default.ActivePanels\" "
 ParticleModuleSpawn="\"Object.Spawn.Rate\" \"Object.Spawn.Rate.Distribution\" \"Object.Spawn.RateScale.Distribution\" \"Object.Burst.BurstList\" \"Object.Burst.BurstList.BurstList[0]\" \"Object.Burst.BurstScale.Distribution\" "
@@ -3445,30 +3454,33 @@ MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Co
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Config,MaterialEditorInstanceConstant.ParameterGroups.Divisions,MaterialEditorInstanceConstant.ParameterGroups.Outline,MaterialEditorInstanceConstant.ParameterGroups.Pattern,MaterialEditorInstanceConstant.ParameterGroups.Progress,MaterialEditorInstanceConstant.ParameterGroups.Shape,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 GetPointOnBezierCurve=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BP_SequenceController_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+SceneComponent=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+BP_SwitcherBox_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Logic/BP_GameLogic
-MRUItem1=/Game/Textures/UI/HurtVingette
-MRUItem2=/Game/RoboBars/Materials/ExamplesUmg/MI_UmgPatternHearts
-MRUItem3=/Game/Blueprints/Widgets/BPW_GameWindow
-MRUItem4=/Game/Blueprints/Widgets/BPW_Hearts
-MRUItem5=/Game/Blueprints/Enemies/BP_EnemySmall
-MRUItem6=/Game/Blueprints/Enemies/BP_EnemyDefault
-MRUItem7=/Game/Blueprints/BP_SequenceController
-MRUItem8=/Game/Blueprints/Logic/BP_ParticleShot
-MRUItem9=/Paper2D/DefaultSpriteMaterial
-MRUItem10=/Paper2D/MaskedUnlitSpriteMaterial
-MRUItem11=/Game/Materials/SpriteTranslucent
-MRUItem12=/Game/Textures/UI/Button_A1_Sprite
-MRUItem13=/Game/Blueprints/Enemies/BP_EnemyNormal
-MRUItem14=/Game/Particles/P_Explosion
-MRUItem15=/Game/Textures/Star
-MRUItem16=/Game/Particles/P_RibbonParticle
-MRUItem17=/Game/Materials/MAT_Star
-MRUItem18=/Game/Textures/Projectile
-MRUItem19=/Game/Materials/MAT_Ribbon
+MRUItem0=/Game/Blueprints/Logic/BP_SwitcherBox
+MRUItem1=/Game/Blueprints/Enemies/BP_EnemyNormal
+MRUItem2=/Game/Blueprints/Enemies/BP_EnemyDefault
+MRUItem3=/Game/Blueprints/Enemies/BP_EnemyBoss
+MRUItem4=/Game/Blueprints/Logic/BP_GameLogic
+MRUItem5=/Game/Textures/UI/HurtVingette
+MRUItem6=/Game/RoboBars/Materials/ExamplesUmg/MI_UmgPatternHearts
+MRUItem7=/Game/Blueprints/Widgets/BPW_GameWindow
+MRUItem8=/Game/Blueprints/Widgets/BPW_Hearts
+MRUItem9=/Game/Blueprints/Enemies/BP_EnemySmall
+MRUItem10=/Game/Blueprints/BP_SequenceController
+MRUItem11=/Game/Blueprints/Logic/BP_ParticleShot
+MRUItem12=/Paper2D/DefaultSpriteMaterial
+MRUItem13=/Paper2D/MaskedUnlitSpriteMaterial
+MRUItem14=/Game/Materials/SpriteTranslucent
+MRUItem15=/Game/Textures/UI/Button_A1_Sprite
+MRUItem16=/Game/Particles/P_Explosion
+MRUItem17=/Game/Textures/Star
+MRUItem18=/Game/Particles/P_RibbonParticle
+MRUItem19=/Game/Materials/MAT_Star
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Logic/BP_SwitcherBox.BP_SwitcherBox;
 RecentlyPlaced=/Game/Blueprints/Logic/BP_ParticleShot.BP_ParticleShot;
 RecentlyPlaced=/Game/Particles/P_RibbonParticle.P_RibbonParticle;
 RecentlyPlaced=/Game/Blueprints/Enemies/BP_EnemyNormal.BP_EnemyNormal;/Engine/Transient.ActorFactoryBlueprint_0
