Working Menu Loop. Settings menu ready to implement.
Need to setup settings loading/saving. 
Main menu loop done. Can now port mostly finished gameplay loop to mobile and throw it at people. 
Local highscore, need to get onto google API asap
NEED ART.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -95,7 +95,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Levels/TestMap_01.TestMap_01
+GameDefaultMap=/Game/Levels/MainMenu.MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Script/Engine.GameModeBase
 GlobalDefaultServerGameMode=None
