--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -116,6 +116,9 @@ LastLevel=/Game/Levels/MainMenu
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_MainMenu.BPW_MainMenu
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_GameWindow.BPW_GameWindow
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_MainSettings.BPW_MainSettings
+OpenAssetsAtExit=/Game/Blueprints/Widgets/BPW_GameOver.BPW_GameOver
 
 [DetailCategories]
 CryptoKeysSettings.Encryption=True
@@ -2596,6 +2599,86 @@ ParticleModuleAccelerationOverLifetime.Cascade=True
 ParticleModuleLocationPrimitiveCylinder.Location=True
 ParticleModuleLocationPrimitiveCylinder.Cascade=True
 FloatChannelKeyProxy.Key=False
+SequencerGenericKeyStruct.Key=True
+MainMenu_C.Tick=True
+MainMenu_C.Replication=True
+MainMenu_C.Input=True
+MainMenu_C.Actor=True
+BPW_MainMenu_C.Appearance=True
+BPW_MainMenu_C.Designer=True
+BPW_MainMenu_C.Input=True
+BPW_MainMenu_C.Interaction=True
+BPW_MainMenu_C.Performance=True
+BPW_MainMenu_C.Layout=True
+BPW_MainMenu_C.Behavior=True
+BPW_MainMenu_C.Render Transform=True
+BPW_MainMenu_C.Clipping=True
+BPW_MainMenu_C.Navigation=True
+CheckBox.Layout=True
+CheckBox.Appearance=True
+CheckBox.Style=True
+CheckBox.Interaction=True
+CheckBox.Behavior=True
+CheckBox.Render Transform=True
+CheckBox.Performance=True
+CheckBox.Clipping=True
+CheckBox.Navigation=True
+CheckBox.Events=True
+Spacer.Layout=True
+Spacer.Appearance=True
+Spacer.Behavior=True
+Spacer.Render Transform=True
+Spacer.Performance=True
+Spacer.Clipping=True
+Spacer.Navigation=True
+BPW_MenuItem_C.Layout=True
+BPW_MenuItem_C.Appearance=True
+BPW_MenuItem_C.Input=True
+BPW_MenuItem_C.Interaction=True
+BPW_MenuItem_C.Behavior=True
+BPW_MenuItem_C.Render Transform=True
+BPW_MenuItem_C.Performance=True
+BPW_MenuItem_C.Clipping=True
+BPW_MenuItem_C.Navigation=True
+SizeBox.Layout=True
+SizeBox.Child Layout=True
+SizeBox.Behavior=True
+SizeBox.Render Transform=True
+SizeBox.Performance=True
+SizeBox.Clipping=True
+SizeBox.Navigation=True
+Overlay.Layout=True
+Overlay.Behavior=True
+Overlay.Render Transform=True
+Overlay.Performance=True
+Overlay.Clipping=True
+Overlay.Navigation=True
+ScaleBox.Layout=True
+ScaleBox.Stretching=True
+ScaleBox.Performance=True
+ScaleBox.Behavior=True
+ScaleBox.Render Transform=True
+ScaleBox.Clipping=True
+ScaleBox.Navigation=True
+BPW_MainSettings_C.Appearance=True
+BPW_MainSettings_C.Input=True
+BPW_MainSettings_C.Interaction=True
+BPW_MainSettings_C.Behavior=True
+BPW_MainSettings_C.Render Transform=True
+BPW_MainSettings_C.Performance=True
+BPW_MainSettings_C.Clipping=True
+BPW_MainSettings_C.Navigation=True
+BPW_MainSettings_C.Designer=True
+BPW_MainSettings_C.Layout=True
+BPW_GameOver_C.Appearance=True
+BPW_GameOver_C.Input=True
+BPW_GameOver_C.Interaction=True
+BPW_GameOver_C.Behavior=True
+BPW_GameOver_C.Render Transform=True
+BPW_GameOver_C.Performance=True
+BPW_GameOver_C.Clipping=True
+BPW_GameOver_C.Navigation=True
+BPW_GameOver_C.Layout=True
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=64.000
@@ -2626,7 +2709,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/RoboBars
+ContentBrowserTab1.SelectedPaths=/Game/Levels
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -2648,7 +2731,7 @@ OnlyBuildVisibility=False
 
 [DetailPropertyExpansion]
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" \"Object.Audio.CompressionOverrides\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
@@ -2670,10 +2753,10 @@ UMGEditorProjectSettings="\"Object.Designer.DebugResolutions\" \"Object.Designer
 IOSRuntimeSettings="\"Object.Audio.CompressionOverrides\" "
 LuminRuntimeSettings="\"Object.Advanced MPK Packaging.AppPrivileges\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" "
-TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
-TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 PaperSpriteComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Sprite.SpriteColor\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent=
@@ -2695,13 +2778,13 @@ BP_EnemyBase_C=
 Character=
 Pawn=
 REINST_BP_EnemyBase_C_621="\"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 BoxComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 ShapeComponent="\"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-Border="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" "
-ContentWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
-PanelWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
-Button="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" "
+Border="\"Object.Appearance.Background\" \"Object.Appearance.BrushColor\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Render Transform.RenderTransform\" "
 BP_EnemyDefault_C=
 BP_EnemyBoss_C=
 BP_EnemyNormal_C=
@@ -2731,10 +2814,10 @@ ParticleModuleRotationRateBase="\"Object.Rotation.StartRotationRate\" \"Object.R
 LevelEditor2DSettings="\"Object.LayerSnapping.SnapLayers\" \"Object.LayerSnapping.SnapLayers.SnapLayers[0]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[1]\" \"Object.LayerSnapping.SnapLayers.SnapLayers[2]\" "
 MaterialEditorInstanceConstant=
 BPW_Hearts_C="\"Object.Appearance.ColorAndOpacity\" "
-UserWidget=
+UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 BP_EnemySmall_C=
 BPW_Buttons_C="\"Object.Appearance.ColorAndOpacity\" "
-BPW_GameWindow_C=
+BPW_GameWindow_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
 ParticleModuleAccelerationDrag="\"Object.Drag.DragCoefficientRaw.Distribution\" "
 ParticleModuleAccelerationBase="\"Object.Acceleration.AccelOverLife.Distribution\" \"Object.Acceleration.AccelOverLife.Distribution.Object.ConstantCurve\" \"Object.Acceleration.AccelOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Acceleration.AccelOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.Acceleration.AccelOverLife.Distribution.Object.ConstantCurve.Points.Points[1]\" \"Object.Acceleration.AccelOverLife.Distribution.Object.ConstantCurve.Points.Points[2]\" "
 ParticleModuleColorScaleOverLife="\"Object.Color.ColorScaleOverLife.Distribution\" \"Object.Color.AlphaScaleOverLife\" \"Object.Color.AlphaScaleOverLife.Distribution\" \"Object.Color.AlphaScaleOverLife.Distribution.Object.ConstantCurve\" \"Object.Color.AlphaScaleOverLife.Distribution.Object.ConstantCurve.Points\" \"Object.Color.AlphaScaleOverLife.Distribution.Object.ConstantCurve.Points.Points[0]\" \"Object.Color.AlphaScaleOverLife.Distribution.Object.ConstantCurve.Points.Points[1]\" "
@@ -2745,6 +2828,18 @@ ParticleModuleAccelerationOverLifetime="\"Object.Acceleration.AccelOverLife.Dist
 ParticleModuleLocationPrimitiveCylinder="\"Object.Location.StartRadius.Distribution\" \"Object.Location.StartHeight.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleLocationPrimitiveBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.StartHeight.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
 ParticleModuleLocationBase="\"Object.Location.StartRadius.Distribution\" \"Object.Location.StartHeight.Distribution\" \"Object.Location.VelocityScale\" \"Object.Location.VelocityScale.Distribution\" \"Object.Location.StartLocation.Distribution\" "
+BPW_MainMenu_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+CanvasPanel="\"Object.Render Transform.RenderTransform\" "
+HorizontalBox="\"Object.Render Transform.RenderTransform\" "
+CheckBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.UncheckedImage\" \"Object.Style.WidgetStyle.CheckedImage\" \"Object.Style.WidgetStyle.CheckedHoveredImage\" \"Object.Style.WidgetStyle.CheckedPressedImage\" \"Object.Render Transform.RenderTransform\" "
+Spacer="\"Object.Render Transform.RenderTransform\" "
+BPW_MenuItem_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+Overlay="\"Object.Render Transform.RenderTransform\" "
+ScaleBox="\"Object.Render Transform.RenderTransform\" "
+BPW_MainSettings_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+SizeBox="\"Object.Render Transform.RenderTransform\" "
+BPW_GameOver_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
+VerticalBox="\"Object.Layout.Slot.Object.Layout.Layout|Border Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
 
 [Directories2]
 UNR=../../../../../../Users/hpennycuick/Documents/Unreal Projects/SimonOfTheDead/Content/Levels
@@ -3486,28 +3581,30 @@ GetPointOnBezierCurve=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultVa
 BP_SequenceController_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 SceneComponent=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 BP_SwitcherBox_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+BPW_MainMenu_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
+BPW_MainSettings_C=BP_EnemyBase_C.Collision.Collision,ArrayProperty.DefaultValueCategory.None,
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Widgets/BPW_MainMenu
-MRUItem1=/Game/Levels/MainMenu
-MRUItem2=/Game/Particles/P_Explosion
-MRUItem3=/Game/VFX_Toolkit_V1/ParticleSystems/356Days/Par_BubblePop_01
-MRUItem4=/Game/Blueprints/Logic/BP_ParticleShot
-MRUItem5=/Game/VFX_Toolkit_V1/Materials/356Days/M_bubbleBeam_01
-MRUItem6=/Game/Blueprints/Logic/BP_GameLogic
-MRUItem7=/Game/VFX_Toolkit_V1/MatInstances/356Days/MI_bubbleBeam_01
-MRUItem8=/Game/VFX_Toolkit_V1/ParticleSystems/356Days/Par_MissileTrails
-MRUItem9=/Game/VFX_Toolkit_V1/Materials/356Days/M_BubbleBall_01
-MRUItem10=/Game/Blueprints/Logic/BP_SwitcherBox
-MRUItem11=/Game/Blueprints/Enemies/BP_EnemyNormal
-MRUItem12=/Game/Blueprints/Enemies/BP_EnemyDefault
-MRUItem13=/Game/Blueprints/Enemies/BP_EnemyBoss
-MRUItem14=/Game/Textures/UI/HurtVingette
-MRUItem15=/Game/RoboBars/Materials/ExamplesUmg/MI_UmgPatternHearts
-MRUItem16=/Game/Blueprints/Widgets/BPW_GameWindow
-MRUItem17=/Game/Blueprints/Widgets/BPW_Hearts
-MRUItem18=/Game/Blueprints/Enemies/BP_EnemySmall
-MRUItem19=/Game/Blueprints/BP_SequenceController
+MRUItem0=/Game/Blueprints/Widgets/BPW_GameOver
+MRUItem1=/Game/Blueprints/Widgets/BPW_GameWindow
+MRUItem2=/Game/Blueprints/Widgets/BPW_MainSettings
+MRUItem3=/Game/Textures/GUI/Test/ButtonWoodBlock
+MRUItem4=/Game/Blueprints/Widgets/BPW_MenuItem
+MRUItem5=/Game/Levels/MainMenu
+MRUItem6=/Game/Levels/TestMap_01
+MRUItem7=/Game/Blueprints/Widgets/BPW_MainMenu
+MRUItem8=/Game/Particles/P_Explosion
+MRUItem9=/Game/VFX_Toolkit_V1/ParticleSystems/356Days/Par_BubblePop_01
+MRUItem10=/Game/Blueprints/Logic/BP_ParticleShot
+MRUItem11=/Game/VFX_Toolkit_V1/Materials/356Days/M_bubbleBeam_01
+MRUItem12=/Game/Blueprints/Logic/BP_GameLogic
+MRUItem13=/Game/VFX_Toolkit_V1/MatInstances/356Days/MI_bubbleBeam_01
+MRUItem14=/Game/VFX_Toolkit_V1/ParticleSystems/356Days/Par_MissileTrails
+MRUItem15=/Game/VFX_Toolkit_V1/Materials/356Days/M_BubbleBall_01
+MRUItem16=/Game/Blueprints/Logic/BP_SwitcherBox
+MRUItem17=/Game/Blueprints/Enemies/BP_EnemyNormal
+MRUItem18=/Game/Blueprints/Enemies/BP_EnemyDefault
+MRUItem19=/Game/Blueprints/Enemies/BP_EnemyBoss
 
 [PlacementMode]
 RecentlyPlaced=/Game/VFX_Toolkit_V1/ParticleSystems/356Days/Par_BubblePop_01.Par_BubblePop_01;
@@ -3550,6 +3647,9 @@ RecentlyPlaced=/Game/Blueprints/Enemies/BP_EnemyDefault.BP_EnemyDefault;
 /Game/VFX_Toolkit_V1/Materials/356Days/M_BubbleBall_01.M_BubbleBall_01=0
 /Game/VFX_Toolkit_V1/MatInstances/356Days/MI_bubbleBeam_01.MI_bubbleBeam_01=0
 /Game/VFX_Toolkit_V1/Materials/356Days/M_bubbleBeam_01.M_bubbleBeam_01=0
+/Game/Textures/GUI/Test/ButtonWoodBlock.ButtonWoodBlock=0
+/Game/Blueprints/Widgets/BPW_MainSettings.BPW_MainSettings=0
+/Game/Blueprints/Widgets/BPW_MenuItem.BPW_MenuItem=0
 
 [MaterialEditor]
 PrimType=1
@@ -3618,6 +3718,7 @@ Emitter.Actor=True
 StaticMeshActor.Collision=True
 PreviewMaterial.Translucency=True
 PreviewMaterial.Material=True
+TextBlock.Appearance=False
 
 [/Script/UnrealEd.CascadeOptions]
 ModuleColor_Beam_Unselected=(B=235,G=150,R=160,A=0)
